fixed schedule text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,7 @@ h3.hero-info{
 }
 
 .schedule-detail p {
+  font-size: 19px;
   text-align: left;
 }
 
